# whispermedialib

./: CMakeLists.txt  README
media/: adapter_audio.cc  adapter_audio.h  adapter_video.cc  adapter_video.h  component.cc  component.h  controller.cc  controller.h  controller.rpc  controller_v4l.cc  controller_v4l.h  controller_v4l2.cc  controller_v4l2.h  encoder_audio.cc  encoder_audio.h  encoder_video.cc  encoder_video.h  pipeline.cc  pipeline.h  pipeline_runner.cc  pipeline_runner.h  sink_file.cc  sink_file.h  sink_multifd.cc  sink_multifd.h  sink_tcp.cc  sink_tcp.h  source_audio.cc  source_audio.h  source_fd.cc  source_fd.h  source_file.cc  source_file.h  source_tcp.cc  source_tcp.h  source_video.cc  source_video.h  stream_processor.cc  stream_processor.h  stream_provider.cc  (+3 more)
media/gst/: gstaacp.cc  gstaacp.h
media/js/: CMakeLists.txt  test.html
